crates/language-v2/tests/src/fail/p1_definitions/duplicate_expression_name/test.stderr
error: An expression with the name 'Expression1' already exists.
  --> src/fail/p1_definitions/duplicate_expression_name/test.rs:33:40
   |
33 | ...                   name = Expression1,
   |                              ^^^^^^^^^^^
